Add parameters for ease of re-downloading the confluence site
git-svn-id: https://svn.apache.org/repos/asf/karaf/sandbox/website@1067113 13f79535-47bb-0310-9956-ffa450edef68

--- a/pom.xml
+++ b/pom.xml
@@ -172,8 +172,12 @@
                 </executions>
                 <configuration>
                     <remoteServerId>people.apache.org</remoteServerId>
-                    <remoteServerUrl>scp://people.apache.org/www/karaf.apache.org/
-                    </remoteServerUrl>
+                    <remoteServerUrl>scp://people.apache.org/www/karaf.apache.org/</remoteServerUrl>
+                    <url>https://cwiki.apache.org/confluence/rpc/xmlrpc</url>
+                    <space>KARAF</space>
+                    <user>${confluence.user}</user>
+                    <password>${confluence.password}</password>
+                    <target>${basedir}/src/main/webapp</target>
                 </configuration>
                 <dependencies>
                     <dependency>
