--- a/pom.xml
+++ b/pom.xml
@@ -41,8 +41,8 @@
         <netbeans.hint.deploy.server>Tomcat60</netbeans.hint.deploy.server>
         <jetty-port>8080</jetty-port>
         <jetty-war-dir>${project.build.directory}/webapp/</jetty-war-dir>
-        <scalate.version>1.4.0-SNAPSHOT</scalate.version>
-        <wikitext.version>1.2</wikitext.version>
+        <scalate.version>1.4.0</scalate.version>
+        <wikitext.version>1.3</wikitext.version>
         <scalate.editor>${env.SCALATE_EDITOR}</scalate.editor>
         <scalate.mode>production</scalate.mode>
         <scalate.workdir>${project.build.directory}/scalateWorkDir</scalate.workdir>
