--- a/pom.xml
+++ b/pom.xml
@@ -109,6 +109,16 @@
             <artifactId>slf4j-api</artifactId>
             <version>1.6.0</version>
         </dependency>
+		<dependency>
+			<groupId>org.scala-lang</groupId>
+			<artifactId>scala-library</artifactId>
+			<version>2.8.1</version>
+		</dependency>
+		<dependency>
+			<groupId>org.scala-lang</groupId>
+			<artifactId>scala-compiler</artifactId>
+			<version>2.8.1</version>
+		</dependency>
     </dependencies>
 
     <build>
