--- a/pom.xml
+++ b/pom.xml
@@ -25,7 +25,7 @@
     <parent>
         <groupId>org.apache.karaf</groupId>
         <artifactId>karaf</artifactId>
-        <version>2.1.99-SNAPSHOT</version>
+        <version>2.1.3</version>
     </parent>
 
     <modelVersion>4.0.0</modelVersion>
@@ -171,13 +171,13 @@
                 <executions>
                     <execution>
                         <id>generate-htmls</id>
-                        <phase>compile</phase>
+                        <!-- <phase>compile</phase> -->
                         <goals>
                             <goal>sitegen</goal>
                         </goals>
-                        <configuration>
+                        <!-- <configuration>
                             <warSourceDirectory>${project.build.directory}/webapp</warSourceDirectory>
-                        </configuration>
+                        </configuration> -->
                     </execution>
                 </executions>
                 <configuration>
