[KARAF-2218] Avoid to remove manual folder when updating the site
git-svn-id: https://svn.apache.org/repos/asf/karaf/site/trunk@1457040 13f79535-47bb-0310-9956-ffa450edef68

--- a/pom.xml
+++ b/pom.xml
@@ -297,6 +297,8 @@
                     <ignorePathsToDelete>
                         <ignorePathToDelete>docs/**</ignorePathToDelete>
                     </ignorePathsToDelete>
+                    <tryUpdate>true</tryUpdate>
+		    <skipDeletedFiles>true</skipDeletedFiles>
                 </configuration>
             </plugin>
         </plugins>
