--- a/_config.yml
+++ b/_config.yml
@@ -18,10 +18,10 @@
 # You can create any custom variable you would like, and they will be accessible
 # in the templates via {{ site.myvariable }}.
 
-title: Apache Karaf - Enterprise runtime everywhere
+title: Apache Karaf - The modulith runtime
 email: dev@karaf.apache.org
 description: >- # this means to ignore newlines until "baseurl:"
-  Karaf provides polymorphic applications runtime for the enterprise, running on premise or on cloud.
+  Karaf provides modulith runtime for the enterprise, running on premise or on cloud.
   Focus on your business code and applications, Apache Karaf deals with the rest.
 baseurl: ""
 url: "https://karaf.apache.org"
